version 1.15.xx (2016)
	+ Added 'mergeMRexperiment' function
	+ Replaced RUnit with testthat library for unit testing
	+ Adding multiple upgrades and changes throughout
version 1.13.xx (2015)
	+ Upgrade support for biom-format vs. 2.0
	+ Fixed issue - "MRtable, etc will report NA rows when user requests more features than available"
	+ Fixed s2 miscalculation in calcZeroComponent
version 1.11.xx (2015)
	+ Adding fitFeatureModel - a feature based zero-inflated log-normal model.
	+ Added MRcoefs,MRtable,MRfulltable support for fitFeatureModel output.
	+ Added mention in vignette.
	+ Added support for normalizing matrices instead of just MRexperiment objects.
	+ Fixed cumNormStat's non-default qFlag option 
version 1.9.xx (2015)
	+ Added flexibility in formula choice for fitTimeSeries
	+ Added readability in ssPermAnalysis
	+ Fixed default in plotClassTimeSeries (include = c("1",...))
	+ Added fitTimeSeries vignette
	+ Removed interactiveDisplay to namespace - moved to suggests
	+ Fixed ordering of MRtable,MRfulltable first four columns
	+ modified df estimated through responsibilities
	+ renamed fitMeta to fitLogNormal - a more appropriate name
version 1.7.xx (2014-05-07)
	+ Added function plotBubble
	+ Added parallel (multi-core) options to fitPA, fitDO
	+ Fixed bug for fitMeta when useCSSoffset=FALSE and model matrix ncol==2
	+ (1.7.10) Updated default quantile estimate (.5) for low estimates
	+ (1.7.10) Added short description on how to do multiple group comparisons
	+ (1.7.15) Output of fitZig (eb) is now a result of limma::eBayes instead of limma::ebayes
	+ (1.7.16) plotMRheatmap allows for sorting by any stat (not just sd)
	+ (1.7.18) fitTimeSeries Including times series method for differentially abundant time intervals
	+ (1.7.20) Fixed minor bug for OTU level time series analyses and added plotClassTimeSeries
	+ (1.7.26) Added warning / fix if any samples are empty in cumNormStat
	+ (1.7.27) Added a few unit tests