@@ -1,11 +1,11 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/load_meta.R
-\name{load_meta}
-\alias{load_meta}
+% Please edit documentation in R/loadMeta.R
+\name{loadMeta}
+\alias{loadMeta}
 \alias{metagenomicLoader}
 \title{Load a count dataset associated with a study.}
 \usage{
-load_meta(file, sep = "\\t")
+loadMeta(file, sep = "\\t")
 }
 \arguments{
 \item{file}{Path and filename of the actual data file.}
@@ -21,10 +21,10 @@ Load a matrix of OTUs in a tab delimited format
 \examples{
 
 dataDirectory <- system.file("extdata", package="metagenomeSeq")
-lung = load_meta(file.path(dataDirectory,"CHK_NAME.otus.count.csv"))
+lung = loadMeta(file.path(dataDirectory,"CHK_NAME.otus.count.csv"))
 
 }
 \seealso{
-\code{\link{load_phenoData}}
+\code{\link{loadPhenoData}}
 }
 
